--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JeffChat 0.0.1-alpha</title>
-<script defer src="main.js"></script></head>
+</head>
 
 <body>
     <h2 id="username" hidden></h2>
